--- a/root/admin_panel/templates/admin_panel/allUsers.html
+++ b/root/admin_panel/templates/admin_panel/allUsers.html
@@ -109,84 +109,48 @@
 			</div>
 		</div>
 	</div>
-	<div class="mobile-menu-overlay"></div>
 
-	<div class="main-container">
-		<div class="pd-ltr-20">
-			<div class="card-box pd-20 mb-30">
-				<div class="row align-items-center">
-					<div class="col-md-4">
-						<img src="{% static 'admin_panel/vendors/images/banner-img.png' %}" alt="">
-					</div>
-					<div class="col-md-8">
-						<h4 class="font-20 weight-500 mb-10 text-capitalize">
-							Welcome back <div class="weight-600 font-30 text-blue">{{ user.name }}</div>
-						</h4>
-						<p class="font-18 max-width-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde hic non repellendus debitis iure, doloremque assumenda. Autem modi, corrupti, nobis ea iure fugiat, veniam non quaerat mollitia animi error corporis.</p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xl-3 mb-30">
-					<div class="card-box height-100-p widget-style1">
-						<div class="d-flex flex-wrap align-items-center">
+<div class="main-container">
+    <div class="pd-ltr-20 xs-pd-20-10">
+        <div class="min-height-200px">
 
-							<div class="widget-data">
-								<div class="h4 mb-0">Contact</div>
-								<div class="weight-600 font-14">{{ user.mobile_no }}</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 mb-30">
-					<div class="card-box height-100-p widget-style1">
-						<div class="d-flex flex-wrap align-items-center">
-							<div class="widget-data">
-								<div class="h4 mb-0">Email Address</div>
-								<div class="weight-600 font-14">{{ user.email }}</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 mb-30">
-					<div class="card-box height-100-p widget-style1">
-						<div class="d-flex flex-wrap align-items-center">
-							<div class="widget-data">
-								<div class="h4 mb-0">Department</div>
-								<div class="weight-600 font-14">{{ user.department_name }}</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 mb-30">
-					<div class="card-box height-100-p widget-style1">
-						<div class="d-flex flex-wrap align-items-center">
-							<div class="widget-data">
-								<div class="h4 mb-0">Age</div>
-								<div class="weight-600 font-14">{{ user.age }}</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
 
-			<div class="card-box mb-30">
-				<h2 class="h4 pd-20">Address</h2>
-				<h5 class="h4 pd-20">{{ user.address }}</h5>
-			</div>
+            <table class="table table-bordered">
+                <thead>
+                <tr>
+                    <th scope="col">#</th>
+                    <th>Name</th>
+                    <th>mobile no.</th>
+                    <th>email</th>
+                    <th>age</th>
+                    <th>department</th>
+                    <th>address</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for user in users %}
+                    <tr>
+                        <th scope="row">-></th>
+                        <td>{{ user.name }}</td>
+                        <td>{{ user.mobile_no }}</td>
+                        <td>{{ user.email }}</td>
+                        <td>{{ user.age }}</td>
+                        <td>{{ user.department_name }}</td>
+                        <td>{{ user.address }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
 
-		</div>
-	</div>
-	<!-- js -->
-	<script src="{% static 'admin_panel/vendors/scripts/core.js' %}"></script>
-	<script src="{% static 'admin_panel/vendors/scripts/script.min.js' %}"></script>
-	<script src="{% static 'admin_panel/vendors/scripts/process.js' %}"></script>
-	<script src="{% static 'admin_panel/vendors/scripts/layout-settings.js' %}"></script>
-	<script src="{% static 'admin_panel/src/plugins/apexcharts/apexcharts.min.js' %}"></script>
-	<script src="{% static 'admin_panel/src/plugins/datatables/js/jquery.dataTables.min.js' %}"></script>
-	<script src="{% static 'admin_panel/src/plugins/datatables/js/dataTables.bootstrap4.min.js' %}"></script>
-	<script src="{% static 'admin_panel/src/plugins/datatables/js/dataTables.responsive.min.js' %}"></script>
-	<script src="{% static 'admin_panel/src/plugins/datatables/js/responsive.bootstrap4.min.js' %}"></script>
-	<script src="{% static 'admin_panel/vendors/scripts/dashboard.js' %}"></script>
+
+        </div>
+
+    </div>
+</div>
+<!-- js -->
+<script src="{% static 'admin_panel/vendors/scripts/core.js' %}"></script>
+<script src="{% static 'admin_panel/vendors/scripts/script.min.js' %}"></script>
+<script src="{% static 'admin_panel/vendors/scripts/process.js' %}"></script>
+<script src="{% static 'admin_panel/vendors/scripts/layout-settings.js' %}"></script>
 </body>
 </html>
