--- a/root/admin_panel/templates/admin_panel/viewStatistics.html
+++ b/root/admin_panel/templates/admin_panel/viewStatistics.html
@@ -109,84 +109,90 @@
 			</div>
 		</div>
 	</div>
-	<div class="mobile-menu-overlay"></div>
-
 	<div class="main-container">
-		<div class="pd-ltr-20">
-			<div class="card-box pd-20 mb-30">
-				<div class="row align-items-center">
-					<div class="col-md-4">
-						<img src="{% static 'admin_panel/vendors/images/banner-img.png' %}" alt="">
+		<div class="pd-ltr-20 xs-pd-20-10">
+			<div class="min-height-200px">
+				<div class="page-header">
+					<div class="row">
+						<div class="col-md-6 col-sm-12">
+							<div class="title">
+								<h4>Apexcharts</h4>
+							</div>
+							<nav aria-label="breadcrumb" role="navigation">
+								<ol class="breadcrumb">
+									<li class="breadcrumb-item"><a href="index.html">Home</a></li>
+									<li class="breadcrumb-item active" aria-current="page">Charts</li>
+								</ol>
+							</nav>
+						</div>
+						<div class="col-md-6 col-sm-12 text-right">
+							<div class="dropdown">
+								<a class="btn btn-primary dropdown-toggle" href="#" role="button" data-toggle="dropdown">
+									January 2020
+								</a>
+								<div class="dropdown-menu dropdown-menu-right">
+									<a class="dropdown-item" href="#">Export List</a>
+									<a class="dropdown-item" href="#">Policies</a>
+									<a class="dropdown-item" href="#">View Assets</a>
+								</div>
+							</div>
+						</div>
 					</div>
-					<div class="col-md-8">
-						<h4 class="font-20 weight-500 mb-10 text-capitalize">
-							Welcome back <div class="weight-600 font-30 text-blue">{{ user.name }}</div>
-						</h4>
-						<p class="font-18 max-width-600">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde hic non repellendus debitis iure, doloremque assumenda. Autem modi, corrupti, nobis ea iure fugiat, veniam non quaerat mollitia animi error corporis.</p>
+				</div>
+				<div class="bg-white pd-20 card-box mb-30">
+					<h4 class="h4 text-blue">line Chart</h4>
+					<div id="chart1"></div>
+				</div>
+				<div class="bg-white pd-20 card-box mb-30">
+					<h4 class="h4 text-blue">Area Chart</h4>
+					<div id="chart2"></div>
+				</div>
+				<div class="bg-white pd-20 card-box mb-30">
+					<h4 class="h4 text-blue">Column Chart</h4>
+					<div id="chart3"></div>
+				</div>
+				<div class="bg-white pd-20 card-box mb-30">
+					<h4 class="h4 text-blue">Bar Chart</h4>
+					<div id="chart4"></div>
+				</div>
+				<div class="bg-white pd-20 card-box mb-30">
+					<h4 class="h4 text-blue">Mixed Chart</h4>
+					<div id="chart5"></div>
+				</div>
+				<div class="bg-white pd-20 card-box mb-30">
+					<h4 class="h4 text-blue">Timeline Chart</h4>
+					<div id="chart6"></div>
+				</div>
+				<div class="bg-white pd-20 card-box mb-30">
+					<h4 class="h4 text-blue">Candlestick Chart</h4>
+					<div id="chart7"></div>
+				</div>
+				<div class="row">
+					<div class="col-md-6 mb-30">
+						<div class="pd-20 card-box height-100-p">
+							<h4 class="h4 text-blue">Pie Chart</h4>
+							<div id="chart8"></div>
+						</div>
+					</div>
+					<div class="col-md-6 mb-30">
+						<div class="pd-20 card-box height-100-p">
+							<h4 class="h4 text-blue">Radial Bar Chart</h4>
+							<div id="chart9"></div>
+						</div>
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-xl-3 mb-30">
-					<div class="card-box height-100-p widget-style1">
-						<div class="d-flex flex-wrap align-items-center">
-
-							<div class="widget-data">
-								<div class="h4 mb-0">Contact</div>
-								<div class="weight-600 font-14">{{ user.mobile_no }}</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 mb-30">
-					<div class="card-box height-100-p widget-style1">
-						<div class="d-flex flex-wrap align-items-center">
-							<div class="widget-data">
-								<div class="h4 mb-0">Email Address</div>
-								<div class="weight-600 font-14">{{ user.email }}</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 mb-30">
-					<div class="card-box height-100-p widget-style1">
-						<div class="d-flex flex-wrap align-items-center">
-							<div class="widget-data">
-								<div class="h4 mb-0">Department</div>
-								<div class="weight-600 font-14">{{ user.department_name }}</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-3 mb-30">
-					<div class="card-box height-100-p widget-style1">
-						<div class="d-flex flex-wrap align-items-center">
-							<div class="widget-data">
-								<div class="h4 mb-0">Age</div>
-								<div class="weight-600 font-14">{{ user.age }}</div>
-							</div>
-						</div>
-					</div>
-				</div>
+			<div class="footer-wrap pd-20 mb-20 card-box">
+				DeskApp - Bootstrap 4 Admin Template By <a href="https://github.com/dropways" target="_blank">Ankit Hingarajiya</a>
 			</div>
-
-			<div class="card-box mb-30">
-				<h2 class="h4 pd-20">Address</h2>
-				<h5 class="h4 pd-20">{{ user.address }}</h5>
-			</div>
-
 		</div>
 	</div>
-	<!-- js -->
+    	<!-- js -->
 	<script src="{% static 'admin_panel/vendors/scripts/core.js' %}"></script>
 	<script src="{% static 'admin_panel/vendors/scripts/script.min.js' %}"></script>
 	<script src="{% static 'admin_panel/vendors/scripts/process.js' %}"></script>
 	<script src="{% static 'admin_panel/vendors/scripts/layout-settings.js' %}"></script>
 	<script src="{% static 'admin_panel/src/plugins/apexcharts/apexcharts.min.js' %}"></script>
-	<script src="{% static 'admin_panel/src/plugins/datatables/js/jquery.dataTables.min.js' %}"></script>
-	<script src="{% static 'admin_panel/src/plugins/datatables/js/dataTables.bootstrap4.min.js' %}"></script>
-	<script src="{% static 'admin_panel/src/plugins/datatables/js/dataTables.responsive.min.js' %}"></script>
-	<script src="{% static 'admin_panel/src/plugins/datatables/js/responsive.bootstrap4.min.js' %}"></script>
-	<script src="{% static 'admin_panel/vendors/scripts/dashboard.js' %}"></script>
+	<script src="{% static 'admin_panel/vendors/scripts/apexcharts-setting.js' %}"></script>
 </body>
 </html>
