--- a/root/admin_panel/templates/admin_panel/login.html
+++ b/root/admin_panel/templates/admin_panel/login.html
@@ -103,8 +103,12 @@
 											use code for form submit
 											<input class="btn btn-primary btn-lg btn-block" type="submit" value="Sign In">
 										-->
-										<button class="btn btn-primary btn-lg btn-block">Sign In</button>
+
 									</div>
+                                    <div class="btn-list">
+                                        <button type="submit" class="btn btn-success btn-lg btn-block">Sign In</button>
+{#                                        <a href="{% url 'App:Admin Login' %}"><button type="button" class="btn btn-info btn-lg btn-block">Login as Admin</button></a>#}
+                                    </div>
 {#									<div class="font-16 weight-600 pt-10 pb-10 text-center" data-color="#707373">OR</div>#}
 {#									<div class="input-group mb-0">#}
 {#										<a class="btn btn-outline-primary btn-lg btn-block" href="register.html">Register To Create Account</a>#}
