--- a/root/admin_panel/templates/admin_panel/AdminLogin.html
+++ b/root/admin_panel/templates/admin_panel/AdminLogin.html
@@ -41,11 +41,7 @@
 					<img src="vendors/images/deskapp-logo.svg" alt="">
 				</a>
 			</div>
-			<div class="login-menu">
-				<ul>
-					<li><a href="register.html">Register</a></li>
-				</ul>
-			</div>
+
 		</div>
 	</div>
 	<div class="login-wrap d-flex align-items-center flex-wrap justify-content-center">
@@ -57,33 +53,34 @@
 				<div class="col-md-6 col-lg-5">
 					<div class="login-box bg-white box-shadow border-radius-10">
 						<div class="login-title">
-							<h2 class="text-center text-primary">Login To DeskApp</h2>
+							<h2 class="text-center text-primary">Login To Adhney</h2>
 						</div>
-						<form>
-							<div class="select-role">
-								<div class="btn-group btn-group-toggle" data-toggle="buttons">
-									<label class="btn active">
-										<input type="radio" name="options" id="admin" onclick="{% url 'App:Admin Login' %}">
-										<div class="icon"><img src="{% static 'admin_panel/vendors/images/briefcase.svg' %}" class="svg" alt=""></div>
-										<span>I'm</span>
-										Admin
-									</label>
-									<label class="btn">
-										<input type="radio" name="options" id="user" onclick="{% url 'App:User Login' %}">
-										<div class="icon"><img src="{% static 'admin_panel/vendors/images/person.svg' %}" class="svg" alt=""></div>
-										<span>I'm</span>
-										User
-									</label>
-								</div>
-							</div>
+						<form action="{% url 'App:Admin Login' %}" method="post">
+                            {% csrf_token %}
+{#							<div class="select-role">#}
+{#								<div class="btn-group btn-group-toggle" data-toggle="buttons">#}
+{#									<label class="btn active">#}
+{#										<input name="admin" type="radio" name="options" id="admin">#}
+{#										<div class="icon"><img src="{% static 'admin_panel/vendors/images/briefcase.svg' %}" class="svg" alt=""></div>#}
+{#										<span>I'm</span>#}
+{#										Admin#}
+{#									</label>#}
+{#									<label class="btn">#}
+{#										<input name="user" type="radio" name="options" id="user">#}
+{#										<div class="icon"><img src="{% static 'admin_panel/vendors/images/person.svg' %}" class="svg" alt=""></div>#}
+{#										<span>I'm</span>#}
+{#										User#}
+{#									</label>#}
+{#								</div>#}
+{#							</div>#}
 							<div class="input-group custom">
-								<input type="text" class="form-control form-control-lg" placeholder="Username">
+								<input name="username" type="text" class="form-control form-control-lg" placeholder="Username">
 								<div class="input-group-append custom">
 									<span class="input-group-text"><i class="icon-copy dw dw-user1"></i></span>
 								</div>
 							</div>
 							<div class="input-group custom">
-								<input type="password" class="form-control form-control-lg" placeholder="**********">
+								<input name="password" type="password" class="form-control form-control-lg" placeholder="**********">
 								<div class="input-group-append custom">
 									<span class="input-group-text"><i class="dw dw-padlock1"></i></span>
 								</div>
@@ -106,8 +103,12 @@
 											use code for form submit
 											<input class="btn btn-primary btn-lg btn-block" type="submit" value="Sign In">
 										-->
-										<a class="btn btn-primary btn-lg btn-block" href="index.html">Sign In</a>
+
 									</div>
+                                    <div class="btn-list">
+                                        <button type="submit" class="btn btn-success btn-lg btn-block">Sign In</button>
+                                        <a href="{% url 'App:Login' %}"><button type="button" class="btn btn-info btn-lg btn-block">Login as User</button></a>
+                                    </div>
 {#									<div class="font-16 weight-600 pt-10 pb-10 text-center" data-color="#707373">OR</div>#}
 {#									<div class="input-group mb-0">#}
 {#										<a class="btn btn-outline-primary btn-lg btn-block" href="register.html">Register To Create Account</a>#}
