--- a/root/admin_panel/templates/admin_panel/addUser.html
+++ b/root/admin_panel/templates/admin_panel/addUser.html
@@ -48,15 +48,13 @@
 	</div>
 
 	<div class="left-side-bar">
-		<div class="brand-logo">
-			<a href="index.html">
-				<img src="vendors/images/deskapp-logo.svg" alt="" class="dark-logo">
-				<img src="vendors/images/deskapp-logo-white.svg" alt="" class="light-logo">
-			</a>
-			<div class="close-sidebar" data-toggle="left-sidebar-close">
-				<i class="ion-close-round"></i>
-			</div>
+		{% if user.is_admin %}
+        <div class="brand-logo">
+			<div class="card-box">
+                <h2 class="mb-10 text-center">Admin</h2>
+            </div>
 		</div>
+    {% endif %}
 		<div class="menu-block customscroll">
 			<div class="sidebar-menu">
 				<ul id="accordion-menu">
@@ -133,6 +131,14 @@
 {#                            </div>#}
 
 						</div>
+                        <div class="form-group">
+							<label>Username</label>
+{#							<input name="name" class="form-control" type="text" placeholder="Johnny Brown">#}
+{#                            <div class="form-control">#}
+                                {{ form.username }}
+{#                            </div>#}
+
+						</div>
 						<div class="form-group">
 							<label>Email</label>
 {#							<input name="email" class="form-control" value="bootstrap@example.com" type="email">#}
@@ -186,6 +192,8 @@
                         {{ form.view_all_user }}
                         <br>View Statistics
                         {{ form.view_statistics }}
+                        <br>Admin Rights
+                        {{ form.is_admin }}
 {#						<div class="form-group">#}
 {#							<div class="row">#}
 {#								<div class="col-md-6 col-sm-12">#}
