--- a/root/admin_panel/templates/admin_panel/allUsers.html
+++ b/root/admin_panel/templates/admin_panel/allUsers.html
@@ -48,15 +48,13 @@
 	</div>
 
 	<div class="left-side-bar">
-		<div class="brand-logo">
-			<a href="index.html">
-				<img src="vendors/images/deskapp-logo.svg" alt="" class="dark-logo">
-				<img src="vendors/images/deskapp-logo-white.svg" alt="" class="light-logo">
-			</a>
-			<div class="close-sidebar" data-toggle="left-sidebar-close">
-				<i class="ion-close-round"></i>
-			</div>
+		{% if user.is_admin %}
+        <div class="brand-logo">
+			<div class="card-box">
+                <h2 class="mb-10 text-center">Admin</h2>
+            </div>
 		</div>
+    {% endif %}
 		<div class="menu-block customscroll">
 			<div class="sidebar-menu">
 				<ul id="accordion-menu">
@@ -112,9 +110,14 @@
 
 <div class="main-container">
     <div class="pd-ltr-20 xs-pd-20-10">
-        <div class="min-height-200px">
 
+        <div class="col-md-6 col-sm-12 mb-30">
+            <div class="pd-20 card-box">
+                <h1 class="display-3">Users</h1>
+            </div>
+        </div>
 
+        <div class="pd-20 card-box mb-30">
             <table class="table table-bordered">
                 <thead>
                 <tr>
@@ -141,8 +144,6 @@
                 {% endfor %}
                 </tbody>
             </table>
-
-
         </div>
 
     </div>
