--- a/root/admin_panel/templates/admin_panel/editUser.html
+++ b/root/admin_panel/templates/admin_panel/editUser.html
@@ -134,7 +134,7 @@
                         <td>{{ user.age }}</td>
                         <td>{{ user.department_name }}</td>
                         <td>{{ user.address }}</td>
-                        <td><a href="{% url 'App:Edit user page' user.id %}" >Edit User</a></td>
+                        <td><a href="{% url 'App:Edit user page' user.id key%}" >Edit User</a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
