removed admin rights bug -> only admin can give new users permissions

--- a/root/admin_panel/templates/admin_panel/editUserPage.html
+++ b/root/admin_panel/templates/admin_panel/editUserPage.html
@@ -57,63 +57,73 @@
 <div class="left-side-bar">
     {% if user.is_admin %}
         <div class="brand-logo">
-            <div class="card-box">
+			<div class="card-box">
                 <h2 class="mb-10 text-center">Admin</h2>
             </div>
-        </div>
+		</div>
     {% endif %}
-    <div class="menu-block customscroll">
-        <div class="sidebar-menu">
-            <ul id="accordion-menu">
 
-                <li class="dropdown">
-                    <a href="{% url 'App:home' key %}" class="dropdown-toggle no-arrow">
-                        <span class="micon dw dw-house-1"></span><span class="mtext">Home</span>
-                    </a>
-                </li>
+		<div class="brand-logo">
+			<a href="index.html">
+				<img src="vendors/images/deskapp-logo.svg" alt="" class="dark-logo">
+				<img src="vendors/images/deskapp-logo-white.svg" alt="" class="light-logo">
+			</a>
+			<div class="close-sidebar" data-toggle="left-sidebar-close">
+				<i class="ion-close-round"></i>
+			</div>
+		</div>
+		<div class="menu-block customscroll">
+			<div class="sidebar-menu">
+				<ul id="accordion-menu">
 
-                {% if user.add_user %}
-                    <li class="dropdown">
-                        <a href="{% url 'App:Add User' key %}" class="dropdown-toggle no-arrow">
-                            <i class="micon fa fa-plus" aria-hidden="true"></i>Add User</span>
-                        </a>
-                    </li>
-                {% endif %}
+					<li class="dropdown">
+						<a href="{% url 'App:home' key %}" class="dropdown-toggle no-arrow">
+							<span class="micon dw dw-house-1"></span><span class="mtext">Home</span>
+						</a>
+					</li>
 
-                {% if user.view_all_user %}
-                    <li class="dropdown">
-                        <a href="{% url 'App:View Users' key %}" class="dropdown-toggle no-arrow">
-                            <span class="micon dw dw-library"></span><span class="mtext">View all Users</span>
-                        </a>
-                    </li>
-                {% endif %}
+                    {% if user.add_user or user.is_admin %}
+					<li class="dropdown">
+						<a href="{% url 'App:Add User' key %}" class="dropdown-toggle no-arrow">
+							<i class="micon fa fa-plus" aria-hidden="true"></i>Add User</span>
+						</a>
+					</li>
+                    {% endif %}
 
-                {% if user.edit_user %}
+                    {% if user.view_all_user or user.is_admin %}
                     <li class="dropdown">
-                        <a href="{% url 'App:Edit user' key %}" class="dropdown-toggle no-arrow">
-                            <span class="micon dw dw-edit2"></span><span class="mtext">Edit Users</span>
-                        </a>
-                    </li>
-                {% endif %}
-                {% if user.delete_user %}
-                    <li class="dropdown">
-                        <a href="{% url 'App:Delete Users' key %}" class="dropdown-toggle no-arrow">
-                            <i class="micon fa fa-remove" aria-hidden="true"></i>Delete Users</span>
-                        </a>
-                    </li>
-                {% endif %}
-                {% if user.view_statistics %}
-                    <li class="dropdown">
-                        <a href="{% url 'App:view stats' key %}" class="dropdown-toggle no-arrow">
-                            <span class="micon dw dw-analytics-21"></span><span class="mtext">View Statistics</span>
-                        </a>
-                    </li>
-                {% endif %}
+						<a href="{% url 'App:View Users' key %}" class="dropdown-toggle no-arrow">
+							<span class="micon dw dw-library"></span><span class="mtext">View all Users</span>
+						</a>
+					</li>
+                    {% endif %}
 
-            </ul>
-        </div>
-    </div>
-</div>
+                    {% if user.edit_user or user.is_admin %}
+                    <li class="dropdown">
+						<a href="{% url 'App:Edit user' key%}" class="dropdown-toggle no-arrow">
+							<span class="micon dw dw-edit2"></span><span class="mtext">Edit Users</span>
+						</a>
+					</li>
+                    {% endif %}
+                    {% if user.delete_user or user.is_admin %}
+                    <li class="dropdown">
+						<a href="{% url 'App:Delete Users' key %}" class="dropdown-toggle no-arrow">
+							<i class="micon fa fa-remove" aria-hidden="true"></i>Delete Users</span>
+						</a>
+					</li>
+                    {% endif %}
+                    {% if user.view_statistics or user.is_admin %}
+                    <li class="dropdown">
+						<a href="{% url 'App:view stats' key %}" class="dropdown-toggle no-arrow">
+							<span class="micon dw dw-analytics-21"></span><span class="mtext">View Statistics</span>
+						</a>
+					</li>
+                    {% endif %}
+
+				</ul>
+			</div>
+		</div>
+	</div>
 
 <div class="main-container">
     <div class="pd-ltr-20 xs-pd-20-10">
@@ -188,6 +198,7 @@
                         {#                            </div>#}
                     </div>
 
+
                     <br>Add User
                     {{ form.add_user }}
                     <br>Delete User
@@ -198,6 +209,11 @@
                     {{ form.view_all_user }}
                     <br>View Statistics
                     {{ form.view_statistics }}
+
+                    {% if user.is_admin %}
+                        <br>Admin Rights
+                        {{ form.is_admin }}
+                    {% endif %}
                     {#						<div class="form-group">#}
                     {#							<div class="row">#}
                     {#								<div class="col-md-6 col-sm-12">#}
