--- a/root/admin_panel/templates/admin_panel/addUser.html
+++ b/root/admin_panel/templates/admin_panel/addUser.html
@@ -48,13 +48,23 @@
 	</div>
 
 	<div class="left-side-bar">
-		{% if user.is_admin %}
+    {% if user.is_admin %}
         <div class="brand-logo">
 			<div class="card-box">
                 <h2 class="mb-10 text-center">Admin</h2>
             </div>
 		</div>
     {% endif %}
+
+		<div class="brand-logo">
+			<a href="index.html">
+				<img src="vendors/images/deskapp-logo.svg" alt="" class="dark-logo">
+				<img src="vendors/images/deskapp-logo-white.svg" alt="" class="light-logo">
+			</a>
+			<div class="close-sidebar" data-toggle="left-sidebar-close">
+				<i class="ion-close-round"></i>
+			</div>
+		</div>
 		<div class="menu-block customscroll">
 			<div class="sidebar-menu">
 				<ul id="accordion-menu">
@@ -65,7 +75,7 @@
 						</a>
 					</li>
 
-                    {% if user.add_user %}
+                    {% if user.add_user or user.is_admin %}
 					<li class="dropdown">
 						<a href="{% url 'App:Add User' key %}" class="dropdown-toggle no-arrow">
 							<i class="micon fa fa-plus" aria-hidden="true"></i>Add User</span>
@@ -73,7 +83,7 @@
 					</li>
                     {% endif %}
 
-                    {% if user.view_all_user %}
+                    {% if user.view_all_user or user.is_admin %}
                     <li class="dropdown">
 						<a href="{% url 'App:View Users' key %}" class="dropdown-toggle no-arrow">
 							<span class="micon dw dw-library"></span><span class="mtext">View all Users</span>
@@ -81,21 +91,21 @@
 					</li>
                     {% endif %}
 
-                    {% if user.edit_user %}
+                    {% if user.edit_user or user.is_admin %}
                     <li class="dropdown">
-						<a href="{% url 'App:Edit user' key %}" class="dropdown-toggle no-arrow">
+						<a href="{% url 'App:Edit user' key%}" class="dropdown-toggle no-arrow">
 							<span class="micon dw dw-edit2"></span><span class="mtext">Edit Users</span>
 						</a>
 					</li>
                     {% endif %}
-                    {% if user.delete_user %}
+                    {% if user.delete_user or user.is_admin %}
                     <li class="dropdown">
 						<a href="{% url 'App:Delete Users' key %}" class="dropdown-toggle no-arrow">
 							<i class="micon fa fa-remove" aria-hidden="true"></i>Delete Users</span>
 						</a>
 					</li>
                     {% endif %}
-                    {% if user.view_statistics %}
+                    {% if user.view_statistics or user.is_admin %}
                     <li class="dropdown">
 						<a href="{% url 'App:view stats' key %}" class="dropdown-toggle no-arrow">
 							<span class="micon dw dw-analytics-21"></span><span class="mtext">View Statistics</span>
@@ -182,6 +192,7 @@
 {#                            </div>#}
 						</div>
 
+                        {% if user.is_admin %}
                         <br>Add User
                         {{ form.add_user }}
                         <br>Delete User
@@ -192,8 +203,10 @@
                         {{ form.view_all_user }}
                         <br>View Statistics
                         {{ form.view_statistics }}
+
                         <br>Admin Rights
                         {{ form.is_admin }}
+                        {% endif %}
 {#						<div class="form-group">#}
 {#							<div class="row">#}
 {#								<div class="col-md-6 col-sm-12">#}
