--- a/root/admin_panel/templates/admin_panel/addUser.html
+++ b/root/admin_panel/templates/admin_panel/addUser.html
@@ -115,7 +115,11 @@
 
 				</ul>
 			</div>
+        <div class="d-flex justify-content-center">
+            <a href="{% url 'App:Login' %}" ><button class="btn btn-danger" id="reset-settings">Logout</button></a>
+        </div>
 		</div>
+
 	</div>
 	<div class="main-container">
 		<div class="pd-ltr-20 xs-pd-20-10">
