--- a/root/admin_panel/templates/admin_panel/index.html
+++ b/root/admin_panel/templates/admin_panel/index.html
@@ -114,8 +114,14 @@
                     {% endif %}
 
 				</ul>
+
 			</div>
+        <div class="d-flex justify-content-center">
+            <a href="{% url 'App:Login' %}" ><button class="btn btn-danger" id="reset-settings">Logout</button></a>
+        </div>
+
 		</div>
+
 	</div>
 	<div class="mobile-menu-overlay"></div>
 
