added images and wrote readme.md-> all instructions to initiate app

--- a/root/admin_panel/templates/admin_panel/editUser.html
+++ b/root/admin_panel/templates/admin_panel/editUser.html
@@ -123,6 +123,11 @@
 	</div>
 <div class="main-container">
     <div class="pd-ltr-20 xs-pd-20-10">
+    <div class="col-md-12 col-sm-12 mb-30">
+            <div class="pd-20 card-box">
+                <h1 class="display-3">Edit Users</h1>
+            </div>
+        </div>
         <div class="pd-20 card-box mb-30">
 
 
