--- a/root/admin_panel/templates/admin_panel/deleteUser.html
+++ b/root/admin_panel/templates/admin_panel/deleteUser.html
@@ -125,7 +125,11 @@
     <div class="pd-ltr-20 xs-pd-20-10">
         <div class="pd-20 card-box mb-30">
 
-
+            <div class="col-md-12 col-sm-12 mb-30">
+            <div class="pd-20 card-box">
+                <h1 class="display-3">Delete Users</h1>
+            </div>
+        </div>
             <table class="table table-bordered">
                 <thead>
                 <tr>
@@ -148,7 +152,7 @@
                         <td>{{ user.age }}</td>
                         <td>{{ user.department_name }}</td>
                         <td>{{ user.address }}</td>
-                        <td><a href="{% url 'App:Delete it' user.id %}" >Delete user</a></td>
+                        <td><a href="{% url 'App:Delete it' user.id key%}" >Delete user</a></td>
                     </tr>
                 {% endfor %}
                 </tbody>
